Bug 292690 - Minimum Size Hint on "Select an IM Network" are wrong
Summary: Minimum Size Hint on "Select an IM Network" are wrong
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-01-28 14:28 UTC by David Edmundson
Modified: 2012-08-07 13:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-01-28 14:28:58 UTC
Open accounts KCM, click add account, then vertically resize the dialog.

Text gets cropped/squashed in the buttons.
Comment 1 Daniele E. Domenichelli 2012-08-07 13:43:25 UTC
Git commit 2d10598957622faca526e93cae18288b8d8eda13 by Daniele E. Domenichelli.
Committed on 07/08/2012 at 15:14.
Pushed by ddomenichelli into branch 'master'.

Use .ui file to create the buttons in SimpleProfileSelectWidget

Also fix some resizing bugs
FIXED-IN: 0.5

M  +14   -62   src/KCMTelepathyAccounts/simple-profile-select-widget.cpp
M  +178  -5    src/KCMTelepathyAccounts/simple-profile-select-widget.ui

http://commits.kde.org/telepathy-accounts-kcm/2d10598957622faca526e93cae18288b8d8eda13