Use .ui file to create the buttons in SimpleProfileSelectWidget

Also fix some resizing bugs

BUG: 292690
FIXED-IN: 0.5